<resources>
    <string name="app_name">맥주이야기</string>


    <string name="app_info">H a n d m a d e B e e r</string>
    <string name="copyright">2019 ⓒ exception inc</string>

    <string name="msg_finish">\'뒤로\' 한번 더 누르시면 종료됩니다.</string>


    <string name="abv">ABV</string>
    <string name="ibu">IBU</string>
    <string name="ebc">EBC</string>
    <string name="srm">SRM</string>
    <string name="ph">PH</string>

    <string name="base_info">기본정보</string>
    <string name="method">제조방법</string>
    <string name="ingredient">성분</string>

    <string name="do_purchase">구매하기</string>

    <string name="tagline">Tagline</string>
    <string name="first_brewed">최초 양조일</string>
    <string name="description">설명</string>
    <string name="food_pairing">푸드 페어링</string>
    <string name="brewers_tips">양조 팁</string>
    <string name="contributed_by">기부자</string>

    <string name="mash">당화</string>
    <string name="fermentation">발효</string>
    <string name="twist">twist</string>

    <string name="malt">맥아</string>
    <string name="hops">홉</string>
    <string name="yeast">누룩</string>


    <string name="count">수량</string>
    <string name="minus">-</string>
    <string name="plus">+</string>

    <string name="purchase_description">※구매는 최대 10개까지 가능합니다</string>
    <string name="buyer">구매자</string>

    <string name="filter">필터</string>
    <string name="close_button">X</string>

    <string name="filter_abv">알콜 도수</string>
    <string name="filter_ibu">쓴맛</string>
    <string name="filter_ebc">색상</string>

    <string name="filter_none">적용안함</string>
    <string name="lighty">연하게</string>
    <string name="normal">보통</string>
    <string name="thick">진하게</string>
    <string name="strongly">강하게</string>
    <string name="weakly">약하게</string>


    <string name="apply">적용</string>

    <string name="msg_input_name">구매자 이름을 입력해주세요</string>
    <string name="quest_purchase">구매 하시겠습니까?</string>
    <string name="msg_complete_purchase">구매 완료되었습니다</string>
    <string name="msg_no_data">조회된 목록이 없습니다.</string>



</resources>
