<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".purchase.ui.PurchaseActivity">

    <TextView
        android:id="@+id/txtTitle"
        style="@style/TitleViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="@dimen/activity_horizontal_margin"/>

    <View
        android:id="@+id/divider"
        style="@style/HorizontalViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/imgBeer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textColor="@color/pointDarkColor"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgBeer"/>

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/dividerInfo"
        style="@style/HorizontalViewStyle"
        app:layout_constraintTop_toBottomOf="@id/layoutInfo"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/dividerInfo"
        app:layout_constraintBottom_toTopOf="@id/layoutButton">

        <TextView
            android:id="@+id/txtCountLabel"
            style="@style/InfoLabelStyle"
            android:layout_marginTop="10dp"
            android:text="@string/count"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutCount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCountLabel">

            <Button
                android:id="@+id/btnMinus"
                style="@style/TextButtonStyle"
                android:text="@string/minus"
                android:tag="-1"
                android:layout_marginStart="3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/txtCount"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#333333"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/btnMinus"/>

            <Button
                android:id="@+id/btnPlus"
                style="@style/TextButtonStyle"
                android:text="@string/plus"
                android:tag="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/txtCount"/>


            <TextView
                android:id="@+id/txtTotPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textColor="@color/pointDarkColor"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>


        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/subTextColor"
            android:text="@string/purchase_description"
            app:layout_constraintTop_toBottomOf="@+id/layoutCount"/>

        <TextView
            android:id="@+id/txtUser"
            style="@style/InfoLabelStyle"
            android:layout_marginTop="20dp"
            android:text="@string/buyer"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription"/>

        <EditText
            android:id="@+id/editTextUser"
            style="@style/InfoLabelStyle"
            app:layout_constraintTop_toBottomOf="@+id/txtUser"/>

    </android.support.constraint.ConstraintLayout>



    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnPurchase"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/do_purchase"
            android:textColor="#ffffff"
            android:background="@color/pointLightColor"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>